--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,15 @@
 
 .image-container {
     position: relative;
-}
-
-.item {
     width: 1000px;
     height: 500px;
     position: absolute;
     transform: translate(50%, 50%);
+}
+
+.item {
+    width: 100%;
+    height: 100%;
     display: none;
 }
 
@@ -27,5 +29,22 @@
 }
 
 button {
-    /* position: absolute; */
+    position: absolute;
+    left: 50%;
+    padding: 15px;
+    border: none;
+    background-color: gray;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+#next{
+    top: 0;
+    margin-top: 10px;
+}
+
+#previous{
+    bottom: 0;
+    margin-bottom: 10px;
+
 }
